--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body *{
    
 }
 body {
-  background: url(./bg-mobile-Copia.jpg);
+  background: url(bg-mobile-Copia.jpg);
   background: red;
   background-size: cover;
   padding: 0;
