--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body *{
 }
 body {
  /*background-image: url("bg-mobile-Copia.jpg");nao da funcionando n sei pq*/ 
-  background: black;
+  background: red;
   background-size: cover;
   padding: 0;
 }
