--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@ body *{
    
 }
 body {
- /*background-image: url("bg-mobile-Copia.jpg");nao da funcionando n sei pq*/ 
+  background: url(./bg-mobile\ -\ Copia.jpg);
   background: red;
   background-size: cover;
   padding: 0;
+  
 }
 #container {
   color: aliceblue;
