--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body *{
 }
 body {
   background: url(./bg-mobile\ -\ Copia.jpg);
-  background: red;
+  /*background: red;*/
   background-size: cover;
   padding: 0;
   
